--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,7 +6,7 @@
 		<title>FioriDeepDive</title>
 		<script id="sap-ui-bootstrap"
 			src="resources/sap-ui-core.js"
-			data-sap-ui-theme="sap_fiori_3"
+			data-sap-ui-theme="sap_belize"
 			data-sap-ui-resourceroots='{"at.clouddna.training.FioriDeepDive": "./"}'
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
